--- a/Tex/src/macros.tex
+++ b/Tex/src/macros.tex
@@ -38,11 +38,11 @@
 \newcommand{\danaTree}{LO-Tree\xspace}
 \newcommand{\danaAVL}{LO-AVL\xspace}
 \newcommand{\bronson}{Snap-Tree\xspace}
-\newcommand{\skiplist}{J-Skiplist\xspace}
-\newcommand{\globalTree}{Lock-Tree\xspace}
-\newcommand{\globalTreap}{Lock-Treap\xspace}
-\newcommand{\domTree}{Domination-Tree\xspace}
-\newcommand{\domTreap}{Domination-Treap\xspace}
+\newcommand{\skiplist}{Java-Skiplist\xspace}
+\newcommand{\globalTree}{Global-Tree\xspace}
+\newcommand{\globalTreap}{Global-Treap\xspace}
+\newcommand{\domTree}{Lock-Tree\xspace}
+\newcommand{\domTreap}{Lock-Treap\xspace}
 \newcommand{\domSkiplist}{Lock-Skiplist\xspace}
 \newcommand{\getOP}{\textsc{get}\xspace}
 
