--- a/Tex/src/related.tex
+++ b/Tex/src/related.tex
@@ -7,24 +7,25 @@ Implementing efficient synchronization for such data structures is considered a 
 As a result, concurrent data structures are manually implemented by concurrency experts.
 This paper shows that (in some cases) an automatic algorithm can produce synchronization that is comparable to synchronization implemented by experts.
 
+\Xomit{
 \paragraph{Locking Protocols}
 Locking protocols are used in databases and shared memory systems to guarantee correctness
 of concurrently executing transactions~\cite{Weikum:2001,BHG:Book87}.
 Our approach can be seen as a way to extend many existing locking protocols by combining them with  optimistic concurrency control.
 In particular, our approach extends the following locking protocols:
 two-phase locking~\cite{Eswaran:1976}, tree locking~\cite{SilberschatzK1980}, DAG locking~\cite{CH:PODS95} and domination locking~\cite{Gueta2011}.
-We demonstrate the benefit of such combination by using the  domination locking protocol to produce efficient concurrency control for
-dynamic data structures.
-
+}
 
 \paragraph{Lock Inference Algorithms}
 There has been a lot of work on automatically inferring locks for transactions.
 Most   algorithms in the literature infer locks that follow the two-phase
 locking protocol~\cite{MZGB:POPL06,Emmi06POPL,gudka2012lock,CCG:PLDI08,HFP:TRANSACT06,CGE:CC08}.
-Our approach can potentially be used to optimized the synchronization produced by these algorithms.
+Our approach can potentially be used to optimize the synchronization produced by these algorithms.
 For example, for  algorithms that employ a two-phase variant in which all locks are acquired at the beginning of a transaction (e.g.,~\cite{gudka2012lock,CCG:PLDI08}),
-our approach may be used to defer the locking (e.g., to just before the first write operation) as well as to eliminate some of the locking operations.
-
+our approach may be used to defer the locking (e.g., to just before the first write operation) and even to eliminate some of the locking steps.
+We demonstrate the benefit of combining our transformation with such algorithms
+ by using the  domination locking protocol~\cite{Gueta2011} to produce efficient concurrency control for
+dynamic data structures.
 
 \paragraph{Transactional Memory}
 Transactional memory approaches (TMs) dynamically resolve inconsistencies
@@ -33,24 +34,26 @@ and deadlocks by rolling back partially completed transactions.
 Unfortunately, in spite of a lot of effort and many TM implementations (see~\cite{HLR:SLCA2010}), existing TMs
 have not been widely adopted due to various concerns~\cite{DuffyTM2010,Cascaval:2008,mckenneyParallel}, including high runtime overhead,
 poor performance and limited ability to handle irreversible operations.
-In particular, modern concurrent programs (and concurrent data structures) are typically based on hand-crafted synchronization, rather than  on a TM approach~\cite{Ohad:OOPSLA11}.
+Modern concurrent programs and data structures are typically based on hand-crafted synchronization, rather than  on a TM approach~\cite{Ohad:OOPSLA11}.
 
-In a sense, our approach can be seen as a specialized TM approach that can be practically used to handle concurrent data structure.
+%In a sense, our approach can be seen as a specialized TM approach that can be practically used to handle concurrent data structure.
 
 
 %\paragraph{Lock Elision for Read-Only Transactions}
 \paragraph{Lock Elision}
-Our approach is inspired by the idea of \emph{sequential locks}~\cite{mckenneyParallel} and the approach presented in~\cite{Nakaike:2010}.
-But  in contrast to these approaches,  which are designed to handle read-only transactions,
-our approach handles read-only prefixes of transactions (operations) that update the shared memory.
-As shown in Section~\ref{sec:eval}, our approach is best suited for update-dominated workloads
+Our transformation is inspired by the idea of \emph{sequential locks}~\cite{mckenneyParallel} and the approach presented in~\cite{Nakaike:2010}, which replace locks with optimistic concurrency control in read-only transactions.
+But  in contrast to these works,  
+we handle read-only prefixes of transactions (operations) that do update the shared memory. In fact,
+as shown in Section~\ref{sec:eval}, our approach is best suited for update-dominated workloads.
 Moreover, using these approaches for a highly-contended data structure (as in Section~\ref{sec:eval}) is likely to provide limited performance,
 because each update transaction causes many read-only transactions to abort.
 
-There are some transactional memory techniques to elide locks from arbitrary critical sections (e.g.,~\cite{Rajwar:2002:TLE:635508.605399,Roy:2009:RSS:1519065.1519094,Afek:2014:SHL:2611462.2611482}).
-In these techniques, a transaction executes the critical section speculatively without acquiring the lock.
-When a transaction is aborted, it can acquire the lock and execute the critical section non-speculatively.
-In contrast to our approach, these techniques cannot combine speculative and non-speculative execution of the same transaction.
+Other works have proposed using transactional memory in order 
+to elide locks from arbitrary critical sections, and fall back on lock-based execution in cases of aborts (e.g.,~\cite{Rajwar:2002:TLE:635508.605399,Roy:2009:RSS:1519065.1519094,Afek:2014:SHL:2611462.2611482}).
+%In these techniques, a transaction executes the critical section speculatively without acquiring the lock.
+%When a transaction is aborted, it can acquire the lock and execute the critical section non-speculatively.
+In contrast to our approach, however, lock elision does not combine speculative and non-speculative execution within 
+the same transaction.
 
 
 
