moved graphs and edited references book titles

--- a/Tex/src-SPAA/myRef.bib
+++ b/Tex/src-SPAA/myRef.bib
@@ -3,8 +3,7 @@
   author    = {Ori Shalev and
                Nir Shavit},
   title     = {Predictive log-synchronization},
-  booktitle = {Proceedings of the 2006 EuroSys Conference, Leuven, Belgium, April
-               18-21, 2006},
+  booktitle = {EuroSys},
   year      = {2006},
   pages     = {305--315},
   crossref  = {DBLP:conf/eurosys/2006},
@@ -18,8 +17,7 @@
 @proceedings{DBLP:conf/eurosys/2006,
   editor    = {Yolande Berbers and
                Willy Zwaenepoel},
-  title     = {Proceedings of the 2006 EuroSys Conference, Leuven, Belgium, April
-               18-21, 2006},
+  title     = {EuroSys},
   year      = {2006},
   publisher = {{ACM}},
   isbn      = {1-59593-322-0},
@@ -30,18 +28,14 @@
 @inproceedings{Israeli:1994:DIS:197917.198079,
  author = {Israeli, Amos and Rappoport, Lihu},
  title = {Disjoint-access-parallel Implementations of Strong Shared Memory Primitives},
- booktitle = {Proceedings of the Thirteenth Annual ACM Symposium on Principles of Distributed Computing},
- series = {PODC '94},
+ booktitle = {PODC},
  year = {1994},
  isbn = {0-89791-654-9},
- location = {Los Angeles, California, USA},
  pages = {151--160},
  numpages = {10},
  url = {http://doi.acm.org/10.1145/197917.198079},
  doi = {10.1145/197917.198079},
  acmid = {198079},
- publisher = {ACM},
- address = {New York, NY, USA},
 }
 
 
@@ -53,9 +47,7 @@ howpublished= "\url{http://code.google.com/p/leveldb}"
 @proceedings{DBLP:conf/popl/2007,
   editor    = {Martin Hofmann and
                Matthias Felleisen},
-  title     = {Proceedings of the 34th {ACM} {SIGPLAN-SIGACT} Symposium on Principles
-               of Programming Languages, {POPL} 2007, Nice, France, January 17-19,
-               2007},
+  title     = {POPL},
   year      = {2007},
   publisher = {{ACM}},
   url       = {http://dl.acm.org/citation.cfm?id=1190216},
@@ -68,9 +60,7 @@ howpublished= "\url{http://code.google.com/p/leveldb}"
 @proceedings{DBLP:conf/oopsla/2011,
   editor    = {Cristina Videira Lopes and
                Kathleen Fisher},
-  title     = {Proceedings of the 26th Annual {ACM} {SIGPLAN} Conference on Object-Oriented
-               Programming, Systems, Languages, and Applications, {OOPSLA} 2011,
-               part of {SPLASH} 2011, Portland, OR, USA, October 22 - 27, 2011},
+  title     = {OOPSLA},
   year      = {2011},
   publisher = {{ACM}},
   isbn      = {978-1-4503-0940-0},
@@ -116,8 +106,7 @@ howpublished= "\url{http://code.google.com/p/leveldb}"
   author    = {Cecilia R. Aragon and
                Raimund Seidel},
   title     = {Randomized Search Trees},
-  booktitle = {30th Annual Symposium on Foundations of Computer Science, Research
-               Triangle Park, North Carolina, USA, 30 October - 1 November 1989},
+  booktitle = {FOCS},
   year      = {1989},
   pages     = {540--545},
 }
@@ -186,7 +175,7 @@ howpublished= "\url{http://code.google.com/p/leveldb}"
 @inproceedings{EllenFRB2010,
  author = {Faith Ellen and Panagiota Fatourou and Eric Ruppert and Franck van Breugel},
  title = {Non-blocking Binary Search Trees},
- booktitle = {29th ACM Symposium on Principles of Distributed Computing (PODC)},
+ booktitle = {PODC},
  year = {2010},
  pages = {131--140},
  keywords = {binary search tree, cas, non-blocking, shared memory},
@@ -240,7 +229,7 @@ howpublished= "\url{http://code.google.com/p/leveldb}"
 @inproceedings{BrownER2014,
  author = {Trevor Brown and Faith Ellen and Eric Ruppert},
  title = {A General Technique for Non-blocking Trees},
- booktitle = {19th ACM Symposium on Principles and Practice of Parallel Programming (PPoPP)},
+ booktitle = {PPoPP},
  pages={329--342},
  year = {2014},
 }
@@ -248,7 +237,7 @@ howpublished= "\url{http://code.google.com/p/leveldb}"
 @inproceedings{NatarajanM2014,
  author = {Aravind Natarajan and Neeraj Mittal},
  title = {Fast Concurrent Lock-free Binary Search Trees},
- booktitle = {19th ACM Symposium on Principles and Practice of Parallel Programming (PPoPP)},
+ booktitle = {PPoPP},
  pages={317--328},
  year = {2014},
 }
@@ -576,8 +565,7 @@ howpublished= "\url{http://jmonkeyengine.org/}"
                Benjamin Reed and
                Maysam Yabandeh},
   title     = {Omid: Lock-free transactional support for distributed data stores},
-  booktitle = {{IEEE} 30th International Conference on Data Engineering, Chicago,
-               {ICDE} 2014, IL, USA, March 31 - April 4, 2014},
+  booktitle = {ICDE},
   year      = {2014},
   pages     = {676--687},
   crossref  = {DBLP:conf/icde/2014},
